
- all functions:
# print messages on.exit()
# catch and throw useful error if selection not in list (gpd, eg)
# length of nbest and coldist if selection!=NULL

- distLextreme: 
# Include Bootstrapping with user-specified proportion left out
# add log argument

- distLprint:
# possibly change to print method for dlf objects with personal class



----------------------------------------------------------------------
----------------------------------------------------------------------
2. extremeStat - development over time
----------------------------------------------------------------------
----------------------------------------------------------------------


Version 0.5 (2015--)
various changes, see github commit log at
https://github.com/BerryBoessenkool/extremeStat/commits/master
highlights:
- failed parameter fitting is handled much better, warning messages became useful
- quiet argument added throughout the package
- several defaults were improved 
- documentation was updated and enhanced
- distLgof now returns weights calculated by 3 different methods
- distLplot now uses supdist, package depends on lmomco >=2.1.3 (version that includes supdist)
- installB: moved to https://github.com/brry/installB to remove devtools dependency here


new functions: distLextremePlot, distLprint, distLquantile
renamed distLgofPlot for consistency in lowerCamel-derived case usage.


----------------------------------------------------------------------
----------------------------------------------------------------------


Version 0.4 (2014-12-04)
depends on berryFunctions again (maintaning functions twice is nonsense)
- distLgof now has ks and quiet argument
- distLplot now has las and ylab arguments
- distLfit gained quiet argument



----------------------------------------------------------------------
----------------------------------------------------------------------


Version 0.3 (2014-09-30)
independent from berryFunctions now.